name:                haskellbook
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ahri/haskell-book#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Piper
maintainer:          adam@ahri.net
copyright:           none
category:            none
build-type:          Simple
cabal-version:       >=1.10

executable haskellbook
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , haskellbook

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.2.3 && < 3 
                     , haskellbook

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     HaskellBook
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
